--- a/src/pages/dyn/track_transition_curves.astro
+++ b/src/pages/dyn/track_transition_curves.astro
@@ -61,6 +61,12 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
 			<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#system_comparison'>System comparison: Cartesian/polar/tangent-normal</a></li>
         </ul>
     </li> 
+	<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#applications_pk'>Applications</a>
+		<ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#celestial_velocities'>Celestial velocities</a></li>  
+			<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#track_transition_curves'>Track transition curves</a></li> 
+        </ul>
+    </li> 
   </ul>
 </div>
 
@@ -1280,7 +1286,6 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
 
 </SubSubSection>
 
-<div hidden>
 <SubSection title="Applications" id="applications_pk"></SubSection>
 
 <SubSubSection title="Celestial velocities" id="celestial_velocities">
@@ -1913,7 +1918,6 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
     to join the straight segment.
   </p>
 </SubSubSubSection>
-</div>
 
 </Layout>
 
