flight callout card fix

--- a/src/pages/dyn/shortest_flight_paths.astro
+++ b/src/pages/dyn/shortest_flight_paths.astro
@@ -113,7 +113,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
       <CalloutCard title="Reference material">
         <ul>
           <li><a href="/dyn/vector_calculus#dot_product">Dot product</a></li>
-          <li><a href="#spherical_coordinates">Spherical coordinates</a></li>
+          <li><a href="/dyn/vectors#spherical_coordinates">Spherical coordinates</a></li>
         </ul>
       </CalloutCard>
       <CalloutCard>
