track transition curves

--- a/src/pages/dyn/celestial_velocities.astro
+++ b/src/pages/dyn/celestial_velocities.astro
@@ -23,7 +23,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
 ---
 
 
-<Layout title = "Particle kinematics" description = "Learn how velocity and acceleration of particles behave in the Cartesian, Polar, and Tangent-Normal coordinate systems.">
+<Layout title = "Celestial velocities" description = "Learn how particle kinematics applies to celestial velocities.">
 
 <div slot="navtree">
   <ul class='list-group list-group-flush py-0'> 
@@ -81,9 +81,9 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
       <CalloutCard title="Reference material">
         <Itemize margin="False">
           <Item>    
-<a href="#angular_velocity ">Angular velocity</a></Item>
+<a href="/dyn/particle_kinematics#angular_velocity ">Angular velocity</a></Item>
           <Item>    
-<a href="#angular_acceleration ">Angular acceleration</a></Item>
+<a href="/dyn/particle_kinematics#angular_acceleration ">Angular acceleration</a></Item>
         </Itemize>
       </CalloutCard>
     </CalloutContainer>
