--- a/src/pages/dyn/particle_kinematics.astro
+++ b/src/pages/dyn/particle_kinematics.astro
@@ -212,6 +212,14 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
       </p>
      </PrairieDrawCanvas>
 		 
+    <CalloutContainer slot="cards">
+      <CalloutCard title="Application Alert!">
+        <p>
+          <a href="/dyn/track_transition_curves">Track transition curves</a> uses <strong>velocity and acceleration vectors</strong> by relating track transition curves to particle kinematics.
+        </p>
+      </CalloutCard>
+    </CalloutContainer>
+
    </SubSection>
 
 <SubSubSection title="Velocity and acceleration in Cartesian basis" id="cartesian_basis">
@@ -449,6 +457,11 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
                 so non-obvious that it has only ever been invented once,
                 and then always copied after that.
               </p>
+        </CalloutCard>
+        <CalloutCard title="Application Alert!">
+          <p>
+            <a href="/dyn/celestial_velocities">Celestial velocities</a> uses <strong>angular velocity</strong> by relating celestial velocities to particle kinematics.
+          </p>
         </CalloutCard>
       </CalloutContainer>
 
