--- a/src/pages/dyn/shortest_flight_paths.astro
+++ b/src/pages/dyn/shortest_flight_paths.astro
@@ -22,7 +22,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 import InlineCanvas from "../../components/InlineCanvas.astro"
 ---
 
-<Layout title = "Shortest flight paths" description = "Learn about how vectors apply to shortest flight paths.">
+<Layout title = "Shortest flight paths" description = "Learn how vectors apply to shortest flight paths.">
 
 <div slot="navtree">
   <ul class='list-group list-group-flush py-0'> 
