--- a/src/pages/dyn/vectors.astro
+++ b/src/pages/dyn/vectors.astro
@@ -1196,7 +1196,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
   <CalloutContainer slot = "cards">
     <CalloutCard title = "Application Alert!">
       <p>
-        <a href = "/dyn/shortest_flight_paths">Shortest flight paths</a> uses <strong>spherical coordinates</strong> by relating latitude and longitude to spherical coordinates.
+        <a href = "/dyn/shortest_flight_paths">Shortest flight paths</a> uses <strong>spherical coordinates</strong> by relating shortest flight paths to vectors.
       </p>
     </CalloutCard>
   </CalloutContainer>
