--- a/src/pages/sol/bending.astro
+++ b/src/pages/sol/bending.astro
@@ -51,11 +51,11 @@ Transverse loads applied to a beam causes deflections, primarily up or down is r
 
 <SubSection title="Sign Conventions" id="sign-conventions">
 
-<strong>Internal</strong>
+For the purposes of drawing shear and moment diagrams, the adopted sign conventions for internal forces and moments are shown below. 
+The internal shear force V and moment M in a beam are <strong> plotted with positive values </strong> when they act in the indicated directions with respect to internal surfaces in the beam. 
+These conventions assume the analysis is conducted on a horizontal beam with positive x-axis pointing to the right.
 
 <Image src='/sol/bending/Internal sign convention - correct branding.png' width='5'> </Image>
-
- <strong>External</strong>
 
 <Image src='/sol/bending/External sign convention - correct branding.png' width='4.5'> </Image>
 
