rigid body kinematics apps

--- a/src/pages/dyn/particle_kinematics.astro
+++ b/src/pages/dyn/particle_kinematics.astro
@@ -213,9 +213,9 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
      </PrairieDrawCanvas>
 		 
     <CalloutContainer slot="cards">
-      <CalloutCard title="Application Alert!">
+      <CalloutCard title="Application alert!">
         <p>
-          <a href="/dyn/track_transition_curves">Track transition curves</a> uses <strong>velocity and acceleration vectors</strong> by PLACEHOLDER.
+          <a href="/dyn/track_transition_curves">Track transition curves</a> uses <strong>velocity and acceleration vectors.</strong>
         </p>
       </CalloutCard>
     </CalloutContainer>
@@ -458,7 +458,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
                 and then always copied after that.
               </p>
         </CalloutCard>
-        <CalloutCard title="Application Alert!">
+        <CalloutCard title="Application alert!">
           <p>
             <a href="/dyn/celestial_velocities">Celestial velocities</a> uses <strong>angular velocity</strong> by PLACEHOLDER.
           </p>
