--- a/src/pages/dyn/vectors.astro
+++ b/src/pages/dyn/vectors.astro
@@ -1194,9 +1194,9 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
     </p>
   </DisplayEquation>  
   <CalloutContainer slot = "cards">
-    <CalloutCard title = "Application Alert!">
+    <CalloutCard title = "Application alert!">
       <p>
-        <a href = "/dyn/shortest_flight_paths">Shortest flight paths</a> uses <strong>spherical coordinates</strong> by PLACEHOLDER.
+        <a href = "/dyn/shortest_flight_paths">Shortest flight paths</a> uses <strong>spherical coordinates.</strong>
       </p>
     </CalloutCard>
   </CalloutContainer>
