--- a/src/pages/dyn/particle_kinetics.astro
+++ b/src/pages/dyn/particle_kinetics.astro
@@ -40,19 +40,19 @@ import DisplayTable from "../../components/DisplayTable.astro"
 
 <Section title="Particle kinetics" id="particle_kinetics">
   <CalloutContainer slot = "cards">
-    <CalloutCard title = "Application Alert!">
+    <CalloutCard title = "Application alert!">
       <p>
-        <a href = "/dyn/accelerating_and_braking">Accelerating and braking</a> uses <strong>particle kinetics</strong>.
+        <a href = "/dyn/accelerating_and_braking">Accelerating and braking</a> uses <strong>particle kinetics.</strong>
       </p>
     </CalloutCard>
-    <CalloutCard title = "Application Alert!">
+    <CalloutCard title = "Application alert!">
       <p>
-        <a href = "/dyn/banked_turns">Banked turns</a> uses <strong>particle kinetics</strong>.
+        <a href = "/dyn/banked_turns">Banked turns</a> uses <strong>particle kinetics.</strong>
       </p>
     </CalloutCard>
-    <CalloutCard title = "Application Alert!">
+    <CalloutCard title = "Application alert!">
       <p>
-        <a href = "/dyn/projectiles_with_air_resistance">Projectiles with air resistance</a> uses <strong>particle kinetics</strong>.
+        <a href = "/dyn/projectiles_with_air_resistance">Projectiles with air resistance</a> uses <strong>particle kinetics.</strong>
       </p>
     </CalloutCard>
   </CalloutContainer>
