--- a/src/pages/dyn/particle_kinematics.astro
+++ b/src/pages/dyn/particle_kinematics.astro
@@ -460,7 +460,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
         </CalloutCard>
         <CalloutCard title="Application alert!">
           <p>
-            <a href="/dyn/celestial_velocities">Celestial velocities</a> uses <strong>angular velocity</strong> by PLACEHOLDER.
+            <a href="/dyn/celestial_velocities">Celestial velocities</a> uses <strong>angular velocity.</strong>
           </p>
         </CalloutCard>
       </CalloutContainer>
