layout titles and preview descs

--- a/src/pages/dyn/accelerating_and_braking.astro
+++ b/src/pages/dyn/accelerating_and_braking.astro
@@ -23,7 +23,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 import Col from "../../components/Col.astro"
 import Row from "../../components/Row.astro"
 ---
-<Layout title = "Rigid body kinetics" description = "Learn about mass moment of inertia and how forces affect velocity and acceleration of rigid bodies.">
+<Layout title = "Accelerating and braking" description = "Learn how rigid body kinetics applies to accelerating and braking.">
 
 <div slot="navtree">
   <ul class='list-group list-group-flush py-0'> 
