--- a/src/pages/sol/transverse_shear.astro
+++ b/src/pages/sol/transverse_shear.astro
@@ -290,9 +290,9 @@ Built-up beams are beams that have been put together with either an adhesive (gl
 
           <Image src="/sol/transverse_shear/BoardsQ.png" width="2.5"></Image>
 
-          <DisplayEquation equation="Q = (b*h)\\bar{y} = 3.75*10^5 \\text{ } mm^3" />
+          <DisplayEquation equation="Q = (b*h)\\bar{y} = (300*50)*25 = 3.75*10^5 \\text{ } mm^3" />
 
-          <DisplayEquation equation="I = \\frac{1}{12}b h^3 = 2.5*10^7 \\text{ } mm^4" />
+          <DisplayEquation equation="I = \\frac{1}{12}b h^3 = \\frac{1}{12}*300*100^3 = 2.5*10^7 \\text{ } mm^4" />
 
           <DisplayEquation equation="q = 1.5 \\text{ } \\frac{kN}{mm}" />
 
