combining accelerating/braking and banked turns
restores accelerating/braking page and banked turns page back to how the original site was

--- a/src/pages/dyn/rigid_body_kinetics.astro
+++ b/src/pages/dyn/rigid_body_kinetics.astro
@@ -1527,9 +1527,12 @@ import Row from "../../components/Row.astro"
   </SubSection>
 
     <div hidden>
+        <PrairieDrawCanvas id = "ava-fp-c" width = "1" height = "1"/>
         <PrairieDrawCanvas id = "ava-fr-c" width = "1" height = "1"/>
         <PrairieDrawCanvas id = "ava-fm-c" width = "1" height = "1"/>
         <PrairieDrawCanvas id = "ava-fc-c" width = "1" height = "1"/>
+        <PrairieDrawCanvas id = "avb-fg-c" width = "1" height = "1"/>
+        <PrairieDrawCanvas id = "avb-fp-c" width = "1" height = "1"/>
         <PrairieDrawCanvas id = "avb-fr-c" width = "1" height = "1"/>
         <PrairieDrawCanvas id = "avb-fb-c" width = "1" height = "1"/>
     </div>
