--- a/src/pages/dyn/four_bar_linkages.astro
+++ b/src/pages/dyn/four_bar_linkages.astro
@@ -692,7 +692,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
           </p>
         </div>
         <div class="references">
-          <h3>References</h3>
+          <h5 style = "text-align:center;">References</h5>
           <ul class="references">
             <li>
               M. Muller.
