callout card fixes

--- a/src/pages/dyn/four_bar_linkages.astro
+++ b/src/pages/dyn/four_bar_linkages.astro
@@ -98,6 +98,13 @@ import DisplayTable from "../../components/DisplayTable.astro"
           <li>constrain motion (e.g., <a href="#aml-sk">knee joint</a> and <a href="#aml-sw">suspension</a> examples below)</li>
           <li>magnify force (e.g., <a href="#aml-sj">parrotfish jaw</a> examples below)</li>
         </ol>
+  <CalloutContainer slot = "cards">
+    <CalloutCard title = "Reference material">
+      <p>
+        This application uses <a href = "/dyn/rigid_body_kinematics#constrained_motion">constrained motion.</a>
+      </p>
+    </CalloutCard>
+  </CalloutContainer>
 </Section>
 
 <SubSection title = "Rotating cranks and reciprocating rockers" id = "rotating_cranks_and_reciprocating_rockers">
@@ -518,7 +525,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
             href="http://commons.wikimedia.org/wiki/File:Blaireau.jpg">Wikimedia
             Commons</a> (<a
             href="http://creativecommons.org/licenses/by-sa/3.0/deed.en">CC
-            BY-SA 3.0</a>) (<a href="/dyn/rigid_body_kinematics/aml_Blaireau.jpg">full-sized image</a>).
+            BY-SA 3.0</a>) (<a href="/dyn/four_bar_linkages/aml_Blaireau.jpg">full-sized image</a>).
           </p>
         </PrairieDrawCanvas>
       </CalloutCard>
