--- a/src/pages/dyn/rigid_body_kinematics.astro
+++ b/src/pages/dyn/rigid_body_kinematics.astro
@@ -120,16 +120,6 @@ import DisplayTable from "../../components/DisplayTable.astro"
           <a href = "/dyn/steering_geometry">Steering geometry</a> uses <strong>rigid bodies.</strong>
         </p>
       </CalloutCard>
-      <CalloutCard title = "Application alert!">
-        <p>
-          <a href = "/dyn/knee_joint">Knee joint</a> uses <strong>rigid bodies.</strong>
-        </p>
-      </CalloutCard>
-      <CalloutCard title = "Application alert!">
-        <p>
-          <a href = "/dyn/suspensions_with_watts_linkage">Suspension with Watt's linkage</a> uses <strong>rigid bodies.</strong>
-        </p>
-      </CalloutCard>
     </CalloutContainer>
   </SubSubsection>
 
@@ -847,7 +837,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
   </CalloutCard>
   <CalloutCard title="Applications">
     <ul>
-      <li>Four-bar linkages</li>
+      <li><a href = "/dyn/four_bar_linkages">Four-bar linkages</a></li>
     </ul>
   </CalloutCard>
 </CalloutContainer>
