steering geometry separation

--- a/src/pages/dyn/four_bar_linkages.astro
+++ b/src/pages/dyn/four_bar_linkages.astro
@@ -24,7 +24,7 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
 import DisplayTable from "../../components/DisplayTable.astro"
 ---
 
-<Layout title = "Four-bar linkages" description = "Learn how rigid body kinematics applies to four bar linkages.">
+<Layout title = "Four-bar linkages" description = "Learn how rigid body kinematics applies to four-bar linkages.">
 
 
 <div slot="navtree">
